# chat-automation

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_ACTION_ITEMS.md  LC1.md  README.md  USAGE.md  __init__.py  base.py  browser-daemon  chatgpt  chatgpt-daemon  chatgpt.py  chatgpt_conversation_69d89850-be88-832b-8bae-45c240bcb0a1.md  code_review_cli.py  code_review_complete.json  code_review_progress.json  code_review_session.json  code_review_summary.json  conversation.py  improvement_session.json  improvement_session_complete.json  install_dependencies.sh  manager.py  perplexity  perplexity.py  perplexity_conversations.py  perplexity_spaces_cache.py  pyproject.toml  requirements.txt  review_and_improve.py  run_browser_test.sh  setup.sh  test_browser_cdp.py  test_browser_keepalive.py  test_fzf.py  test_keepalive.sh  test_keepalive2.py  test_launch.py  test_numbered_input.py  (+4 more)
_bmad-output/: party-mode-session.md  party-mode-state.md
chat_automation/: __init__.py  base.py  browser_daemon.py  cli_common.py  config.py  continue_conversation.py  conversation.py  do_code_review.py  do_code_review_files.py  manager.py  perplexity_conversations.py  utils.py
docs/: project-space-implementation.md  ui-selectors.md
examples/: automation_only.py  brave_chat.py  download_perplexity_asset.py  export_all.py  interactive_chat.py  list_conversations.py  manual_login.py  open_conversation.py  send_message.py  simple_chat.py  summarize_conversation.py  test_chatgpt.py
network_dumps/: 200_chatgpt.com_backend-api_conversation_69a17e86-5e84-832c-8b79-f2b55601c4de.txt  (+5 more)
(+18 files in other folders)
